--- a/views/show.ejs
+++ b/views/show.ejs
@@ -39,13 +39,13 @@
 		<p>
 			Enter your review!
 		</p>
-		<form action="/<%=Restaurant.id%>/review" method="POST" onsubmit="confirmation()">
+		<form action="/<%=Restaurant.id%>/review" method="POST">
 			<i class="far fa-smile"></i>
 			<i class="far fa-meh"></i>
 			<i class="far fa-frown"></i>
 			<i class="far fa-angry"></i>
 			<div class="input-group" id="feedback">
-				<input type="text" class="form-control" name="comment[text]" placeholder="How can we improve?">
+				<input type="text" class="form-control" name="comment" placeholder="How can we improve?">
 			</div>
 		</form>
 	</div>
