--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 <h1 style="text-align:center">Sign Up</h1>
 
 <div style="width:30%;margin:25px auto;">
-	<form action="/register" method="POST" enctype=”multipart/form-data”>
+	<form action="/register" method="POST" enctype="multipart/form-data">
 	<div class="form-group">
 		<input class="form-control" type="text" name="username" placeholder="username">
 	</div>
@@ -23,8 +23,7 @@
 		<input class="form-control" type="tel" name="contact" placeholder="contact No.">
 	</div>
 	<div class="form-group">
-			<input class="form-control" placeholder="enter img url">
-			<input type="file" name="cover" class="filepond">
+			<input type="file" name="avatar" class="filepond">
 	</div>
 	<div class="form-group">
 		<input class="btn btn-lg btn-block btn-info" type="submit">
