--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,250 +1,250 @@
-
-.jumbotron{
-	margin-top:30px;
+.jumbotron {
+	margin-top: 30px;
 }
 
-.navbar{
-	margin-bottom:20px;	
+.navbar {
+	margin-bottom: 20px;
 }
 
-.wrapper{
+.wrapper {
 	display: flex;
-	width:100%;
-	align-items:stretch;
+	width: 100%;
+	align-items: stretch;
 }
-
-#footer{
-	position:absolute;
-	width:100%;
-	height:auto;
-	background-color:black;
-	padding:10px 10px;
-}
-
-#footer a,#call{
-	color:white;
-}
-
-#footer a:hover{
-	color:orange;
-	transition:0.2s;
-	text-decoration:none;
-}
-
-.footer-top{
-	display:flex;
-	flex-direction:row;
-}
-.footer-links{
-	flex:0 0 50%;
-	margin-bottom:15px;
-}
-
-.footer-base{
-	justify-content:space-between;
-	display:flex;
-	flex-direction:row;
-	flex-wrap:nowrap;
-	align-items:center;
-}
-
-.footer-social ul{
-	list-style:none;
-	display:inline;
-}
-
-.footer-social li{
-	display:inline;
-	padding-left:20px;
-	padding-right:20px;
-}
-
-.footer-social li span{
-	font-size:1.5em;
-}
-
-.footer-info{
-	display:flex;
-	flex-wrap:wrap;
-	/* vertical-align:baseline; */
-	margin:30px;
-}
-
-.footer-contact{
-	flex:0 0 33%;
-	margin:30px;
-	align-items:justify;
-}
-
-.footer-contact-options{
-	display:flex;
-	flex-direction:column;
-}
-
 
 /* The sidebar menu */
 .sidebar {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0;
-  left: 0;
-  align-items:stretch;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+	height: 100%; /* 100% Full-height */
+	width: 0; /* 0 width - change this with JavaScript */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Stay on top */
+	top: 0;
+	left: 0;
+	align-items: stretch;
+	background-color: #111; /* Black*/
+	overflow-x: hidden; /* Disable horizontal scroll */
+	padding-top: 60px; /* Place content 60px from the top */
+	transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
 }
 
 /* The sidebar links */
 .sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  margin-bottom:70px;
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	margin-bottom: 70px;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidebar a:hover {
-  color: #f1f1f1;
+	color: #f1f1f1;
 }
 
 /* Position and style the close button (top right corner) */
 .sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
 
 /* The button used to open the sidebar */
 .openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  margin-right:10px;
-  padding: 10px 15px;
-  border: none;
+	font-size: 20px;
+	cursor: pointer;
+	background-color: #111;
+	color: white;
+	margin-right: 10px;
+	padding: 10px 15px;
+	border: none;
 }
 
 .openbtn:hover {
-  background-color: #444;
+	background-color: #444;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
-  transition: margin-left .5s; /* If you want a transition effect */
-  padding: 20px;
+	transition: margin-left .5s; /* If you want a transition effect */
+	padding: 20px;
 }
 
-#restaurant_details{
-	margin-left:20%;
-	margin-top:20px;
-	margin-bottom:20px;
+#restaurant_details {
+	margin-left: 20%;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
-#delete{
-	display:inline;
+#delete {
+	display: inline;
 }
 
-
-.navbar-light .navbar-nav .nav-link:hover{
-	background-color:gray;
-	color:white;
+.navbar-light .navbar-nav .nav-link:hover {
+	background-color: gray;
+	color: white;
 }
 
-.navbar-light .navbar-brand:hover{
-	background-color:gray;
-	color:white;
-}
- 
-.card-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.navbar-light .navbar-brand:hover {
+	background-color: gray;
+	color: white;
 }
 
-.actions-buttons{
-	display:inline;
+.card-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
-#feedback{
-	display:none;
+.actions-buttons {
+	display: inline;
 }
 
-.active{
-  cursor: pointer;
-  color:red;
-}
-.far{
-	padding-bottom:10px;
-	padding-right:10px;
+.share-icons {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
-
-.fas:hover{
-	color:red;
-	cursor:pointer;
+.share-icons i {
+	margin: 1.5rem;
+	padding: 1.3rem;
+	color: rgb(4, 104, 255);
 }
 
-
-.user_profile{
-	font-size:25px;
+.share-icons i:hover,
+.share-buttons {
+	cursor: pointer;
+	background-color: rgba(255, 255, 255, 0.1);
+	transition: all 0.4s;
 }
 
-.user_profile li{
-	margin-bottom:20px;
+#feedback {
+	display: none;
 }
 
-#user_name{
-	font-size:1.5em;
+.social {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-/* modal CSS properties*/
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */ 
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 60%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0); /*Black w/ opacity*/
+.share-icons i {
+	margin-bottom: 0;
+	padding: 12px;
+	font-size: 4rem;
+  border-color: blue;
+  border-radius: 5rem;
+	background-color: blue;
+  color: #ffffff;
+	transition: all 0.5s;
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+.share-icons i:hover {
+	background-color: #ffffff;
+  color: blue;
+	transform: rotate(360deg)scale(1.3);
 }
 
-/* The Close Button */
+.popup-title {
+	text-align: center;
+	margin-top: 5px;
+	margin-bottom: 0;
+}
+
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+	font-size: 2rem;
+	display: flex;
+	justify-content: flex-end;
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.fa-envelope:hover {
+	background-color: #ffffff;
+	color: blue;
 }
 
+.active {
+	cursor: pointer;
+	color: red;
+}
+.far {
+	padding-bottom: 10px;
+	padding-right: 10px;
+}
+
+.far:hover {
+	cursor: pointer;
+	color: red;
+}
+
+.fas:hover {
+	color: red;
+	cursor: pointer;
+}
+
+.user_profile {
+	font-size: 25px;
+}
+
+.user_profile li {
+	margin-bottom: 20px;
+}
+
+#user_name {
+	font-size: 1.5em;
+}
+
+/* new modal */
+/* Styling modal */
+.modal:before {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+}
+
+.modal-dialog {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.modal .modal-content {
+	padding: 20px 20px 20px 20px;
+	-webkit-animation-name: modal-animation;
+	-webkit-animation-duration: 0.5s;
+	animation-name: modal-animation;
+	animation-duration: 0.5s;
+}
+
+.close:hover {
+	cursor: pointer;
+}
+@-webkit-keyframes modal-animation {
+	from {
+		top: -100px;
+		opacity: 0;
+	}
+	to {
+		top: 0px;
+		opacity: 1;
+	}
+}
+
+@keyframes modal-animation {
+	from {
+		top: -100px;
+		opacity: 0;
+	}
+	to {
+		top: 0px;
+		opacity: 1;
+	}
+}
 /* read more */
-.show-read-more .more-text{
-        display: none;
-    }
+.show-read-more .more-text {
+	display: none;
+}
