--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
+
 <script type="text/javascript" src="/javascripts/utils.js"></script>
-<script type="text/javascript" src="/javascripts/modal.js"></script>
+<script defer type="text/javascript" src="/javascripts/modal.js"></script>
 <script type="text/javascript" src="/javascripts/readMore.js"></script>
 <script type="text/javascript" src="/javascripts/sidebar.js"></script>
 </body>
