--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	<link rel="stylesheet" href="/stylesheets/main.css">
-	<script src='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js'></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
   <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
@@ -15,11 +13,10 @@
   <script defer src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
-  <script defer src="/javascripts/uploader.js"></script>
 </head>
 
 <body>
-
+	
 	<div id="mySidebar" class="sidebar">
 		<a href="#">About</a>
 		<a href="#">Services</a>
@@ -27,12 +24,16 @@
 		<a href="#">Contact</a>
 	</div>
 
-	<!-- <div id="main">
-		<button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
-		<h2>Collapsed Sidebar</h2>
-		<p>Content...</p>
-	</div> -->
+	<div class="modal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<span class="close">&times;</span>
+			</div>
+		</div>
+	</div>
+	
 	<div id="main">
+		
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<button class="openbtn" onclick="toggle()">&#9776;</button>
@@ -49,11 +50,11 @@
 					</form>
 				</ul>
 				<ul class="navbar-nav navbar-right">
+					
 					<% if(!currentUser){ %>
 						<li>
-							<a class="nav-link" href="/login">
-								<span class="sr-only">(current)</span>login</a>
-						</li>
+							<button id="loginBtn">login</button>
+						</li>	
 						<li>
 							<a class="nav-link" href="/register">Signup</a>
 						</li>
@@ -61,7 +62,7 @@
 							<li>
 								<a class="nav-link" href="/user/<%=currentUser.id%>">
 									Logged in as:
-									<%= currentUser.username %>
+									<%= currentUser.firstName %>
 								</a>
 							</li>
 							<li>
@@ -70,5 +71,7 @@
 							<% } %>
 				</ul>
 			</div>
-
+			
 		</nav>
+	</div>
+		
