--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,10 @@
-
+</div>
+<!-- Menu Toggle Script -->
 <script type="text/javascript" src="/javascripts/utils.js"></script>
 <script defer type="text/javascript" src="/javascripts/modal.js"></script>
+<script defer type="text/javascript" src="/javascripts/sidebar.js"></script>
 <script type="text/javascript" src="/javascripts/readMore.js"></script>
-<script type="text/javascript" src="/javascripts/sidebar.js"></script>
+<script type="text/javascript" src="/javascripts/uploader.js"></script>
 </body>
 
 </html>
