--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+body{
+	font-family: 'Montserrat', sans-serif;
+}
+
 .jumbotron {
 	margin-top: 30px;
 }
@@ -12,65 +16,6 @@
 	align-items: stretch;
 }
 
-/* The sidebar menu */
-.sidebar {
-	height: 100%; /* 100% Full-height */
-	width: 0; /* 0 width - change this with JavaScript */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Stay on top */
-	top: 0;
-	left: 0;
-	align-items: stretch;
-	background-color: #111; /* Black*/
-	overflow-x: hidden; /* Disable horizontal scroll */
-	padding-top: 60px; /* Place content 60px from the top */
-	transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-}
-
-/* The sidebar links */
-.sidebar a {
-	padding: 8px 8px 8px 32px;
-	text-decoration: none;
-	font-size: 25px;
-	color: #818181;
-	display: block;
-	margin-bottom: 70px;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-	color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidebar .closebtn {
-	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 36px;
-	margin-left: 50px;
-}
-
-/* The button used to open the sidebar */
-.openbtn {
-	font-size: 20px;
-	cursor: pointer;
-	background-color: #111;
-	color: white;
-	margin-right: 10px;
-	padding: 10px 15px;
-	border: none;
-}
-
-.openbtn:hover {
-	background-color: #444;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-	transition: margin-left .5s; /* If you want a transition effect */
-	padding: 20px;
-}
 
 #restaurant_details {
 	margin-left: 20%;
@@ -82,15 +27,6 @@
 	display: inline;
 }
 
-.navbar-light .navbar-nav .nav-link:hover {
-	background-color: gray;
-	color: white;
-}
-
-.navbar-light .navbar-brand:hover {
-	background-color: gray;
-	color: white;
-}
 
 .card-img {
 	width: 100%;
@@ -150,12 +86,22 @@
 	transform: rotate(360deg)scale(1.3);
 }
 
+.card:hover{
+	cursor:pointer;
+}
 .popup-title {
 	text-align: center;
 	margin-top: 5px;
 	margin-bottom: 0;
 }
 
+a:hover{
+	text-decoration: none;
+	color:black;
+}
+a{
+	color:black;
+}
 .close {
 	font-size: 2rem;
 	display: flex;
@@ -186,65 +132,71 @@
 	cursor: pointer;
 }
 
-.user_profile {
-	font-size: 25px;
-}
 
-.user_profile li {
-	margin-bottom: 20px;
-}
-
-#user_name {
-	font-size: 1.5em;
-}
-
-/* new modal */
-/* Styling modal */
-.modal:before {
-	content: '';
-	display: inline-block;
-	height: 100%;
-	vertical-align: middle;
-}
-
-.modal-dialog {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.modal .modal-content {
-	padding: 20px 20px 20px 20px;
-	-webkit-animation-name: modal-animation;
-	-webkit-animation-duration: 0.5s;
-	animation-name: modal-animation;
-	animation-duration: 0.5s;
-}
-
-.close:hover {
-	cursor: pointer;
-}
-@-webkit-keyframes modal-animation {
-	from {
-		top: -100px;
-		opacity: 0;
-	}
-	to {
-		top: 0px;
-		opacity: 1;
-	}
-}
-
-@keyframes modal-animation {
-	from {
-		top: -100px;
-		opacity: 0;
-	}
-	to {
-		top: 0px;
-		opacity: 1;
-	}
-}
 /* read more */
 .show-read-more .more-text {
 	display: none;
+}
+
+
+/* modal styles */
+@media (min-width: 576px) {
+	.modal-dialog {
+	  max-width: 400px;
+	  max-height: 100%;
+	}
+	.modal-dialog .modal-content {
+	  padding: 1rem;
+	  height:100%;
+	}
+  }
+  
+  .modal {
+	max-height: 100%;
+  }
+  
+  .modal-header {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: end;
+		-ms-flex-pack: end;
+			justify-content: flex-end;
+  }
+  
+  .modal-header .modal-close {
+	margin-top: -1.5rem;
+	background: none;
+	outline: none;
+	border: none;
+  }
+  
+  .form-title {
+	margin: -2rem 0rem 2rem;
+  }
+  
+  .btn-round {
+	border-radius: 3rem;
+  }
+  
+  .delimiter {
+	padding: 1rem;
+  }
+
+.filter-buttons{
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 1.2rem;
+}
+
+.filter-radio-buttons{
+	margin-bottom: 1.5rem;
+}
+
+#filterModal label{
+	font-size: 1.2rem;
+}
+
+.modal-content{
+	height:100%;
 }
