--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,16 +1,16 @@
 <%- include("partials/header") %>
-<div class="row" style="width:30%;margin:25px auto;">
-	<div class="col-md-12">
+<div class='form'>
+	<h1>Forgot Password</h1>
 		<form action="/forgot" method="POST">
-			<legend>Forgot Password</legend>
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input type="email" name="email" autofocus class="form-control">
+			<div class="group">
+				<input type="text" name="email" required>
+					<span class="highlight"></span>
+					<span class="bar"></span>
+					<label>email</label>
 			</div>
-			<div class="form-group">
+			<div class="group">
 				<input type="submit" class="btn btn-primary" value="Reset Password">
 			</div>
 		</form>
-	</div>
-</div>
+		</div>
 <%- include("partials/footer") %>
