--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,17 +3,19 @@
 
 <head>
 	<title>restaurant app</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	<link rel="stylesheet" href="/stylesheets/main.css">
+	<link rel="stylesheet" href="/stylesheets/NavBarStyles.css">
+	<link rel="stylesheet" href="/stylesheets/SideBarStyles.css">
+	<link rel="stylesheet" href="/stylesheets/ShowPageStyles.css">
+	<link rel="stylesheet" href="/stylesheets/SignUpFormStyles.css">
+	<link rel="stylesheet" href="/stylesheets/FormStyles.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
-  <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
-  <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
-  <script defer src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
-  <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
-  <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
-  
+	
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -22,65 +24,8 @@ rel="stylesheet"
 href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
 type="text/css"
 />
-</head>
+ </head>
 
-<body>
-	
-	<div id="mySidebar" class="sidebar">
-		<a href="#">About</a>
-		<a href="#">Services</a>
-		<a href="#">Clients</a>
-		<a href="#">Contact</a>
-	</div>
-
-	<div class="modal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<span class="close">&times;</span>
-			</div>
-		</div>
-	</div>
-	
-	<div id="main">
-		
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<button class="openbtn" onclick="toggle()">&#9776;</button>
-				<a class="navbar-brand" href="/">CRITICA</a>
-
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="/">Home</a>
-					</li>
-					<form action="/results" method="GET" class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2 ml-lg-5" type="search" name="rest" placeholder="Enter Restaurant name">
-						<input class="form-control mr-sm-2 ml-lg-5" type="search" name="city" placeholder="Enter Restaurant city">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-					</form>
-				</ul>
-				<ul class="navbar-nav navbar-right">
-					
-					<% if(!currentUser){ %>
-						<li>
-							<button id="loginBtn">login</button>
-						</li>	
-						<li>
-							<a class="nav-link" href="/register">Signup</a>
-						</li>
-						<% }else{ %>
-							<li>
-								<a class="nav-link" href="/user/<%=currentUser.id%>">
-									Logged in as:
-									<%= currentUser.firstName %>
-								</a>
-							</li>
-							<li>
-								<a class="nav-link" href="/logout">Logout</a>
-							</li>
-							<% } %>
-				</ul>
-			</div>
-			
-		</nav>
-	</div>
-		
+ <%- include("../components/Sidebar") %>
+ <%- include("../components/NavBar") %>
+ <% include ("../login") %> 
