--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,55 @@
 <%-include("partials/header")%>
-<div class="row">
-<h1 style="text-align:center">Sign Up</h1>
+	<div class='form'>
+		<h1>Sign Up</h1>
+		<form action="/register" method="POST" enctype="multipart/form-data">
+		<div class="group">      
+			<input type="text" name="username" required>
+			<span class="highlight"></span>
+			<span class="bar"></span>
+			<label>username</label>
+		</div>
+	<div class="group">      
+		<input type="text" name="password" required>
+		<span class="highlight"></span>
+		<span class="bar"></span>
+		<label>password</label>
+	</div>
+	<div class="group">      
+		<input type="text" name="firstName" required>
+		<span class="highlight"></span>
+		<span class="bar"></span>
+		<label>firstName</label>
+	</div>
+	<div class="group">      
+		<input type="text" name="lastName" required>
+		<span class="highlight"></span>
+		<span class="bar"></span>
+		<label>lastName</label>
+	</div>
+	<div class="group">      
+		<input type="text" name="email" required>
+		<span class="highlight"></span>
+		<span class="bar"></span>
+		<label>Email</label>
+	</div>
+	<div class="group">      
+		<input type="text" name="contact" required>
+		<span class="highlight"></span>
+		<span class="bar"></span>
+		<label>Contact</label>
+	</div>
 
-<div style="width:30%;margin:25px auto;">
-	<form action="/register" method="POST" enctype="multipart/form-data">
-	<div class="form-group">
-		<input class="form-control" type="text" name="username" placeholder="username">
+	<div class='file-input group'>
+		<input type='file' name="avatar">
+		<span class='button'>Choose</span>
+		<span class='label' data-js-label>No file selected</label>
+	  </div>
+
+	<div class="group">
+		<input class="btn btn-md" type="submit">
 	</div>
-	<div class="form-group">
-			<input class="form-control" type="password" name="password" placeholder="password">
-	</div>
-	<div class="form-group">
-		<input class="form-control" type="text" name="firstName" placeholder="first name">
-	</div>
-	<div class="form-group">
-			<input class="form-control" type="test" name="lastName" placeholder="last name">
-	</div>
-	<div class="form-group">
-		<input class="form-control" type="email" name="email" placeholder="email">
-	</div>
-	<div class="form-group">
-		<input class="form-control" type="tel" name="contact" placeholder="contact No.">
-	</div>
-	<div class="form-group">
-			<input type="file" name="avatar" class="filepond">
-	</div>
-	<div class="form-group">
-		<input class="btn btn-lg btn-block btn-info" type="submit">
-	</div>
+
 </form>
 </div>
-</div>
-<script type="text/javascript" src="/javascripts/uploader.js"></script>
+
 <%-include("partials/footer")%>
