--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,18 +1,23 @@
 <%- include("partials/header") %>
 
-<div class="row" style="width:30%;margin:25px auto;">
-	<div class="col-md-12">
+<div class='form'>
+	<h1>Reset Password</h1>
 		<form action="/reset/<%= token %>" method="POST">
-		  <legend>Reset Password</legend>
-		  <div class="form-group">
-		    <label for="password">New Password</label>
-		    <input type="password" name="password" value="" placeholder="New password" autofocus="autofocus" class="form-control"/>
+		  <h1>Reset Password</h1>
+		  <div class="group">
+			<input type="text" name="password" required>
+			<span class="highlight"></span>
+			<span class="bar"></span>
+			<label>New Password</label>
 		  </div>
-		  <div class="form-group">
-		    <label for="confirm">Confirm Password</label>
-		    <input type="password" name="confirm" value="" placeholder="Confirm password" class="form-control"/>
+		  <div class="group">
+
+			<input type="text" name="confirm" required>
+			<span class="highlight"></span>
+			<span class="bar"></span>
+			<label>Confirm Password</label>
 		  </div>
-		  <div class="form-group">
+		  <div class="group">
 		    <button type="submit" class="btn btn-primary">Update Password</button>
 		  </div>
 		</form>
