--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="/stylesheets/ShowPageStyles.css">
 	<link rel="stylesheet" href="/stylesheets/SignUpFormStyles.css">
 	<link rel="stylesheet" href="/stylesheets/FormStyles.css">
+	<link rel="stylesheet" href="/stylesheets/UserPageStyles.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 	
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
@@ -25,7 +26,5 @@ href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/ma
 type="text/css"
 />
  </head>
-
- <%- include("../components/Sidebar") %>
+<body>
  <%- include("../components/NavBar") %>
- <% include ("../login") %> 
