--- a/views/show.ejs
+++ b/views/show.ejs
@@ -44,7 +44,7 @@
 	<div class='show-page-buttons'>
 		<button id="reviewBtn" class="btn btn-outline-danger">review</button>
 
-		<form action="/<%=Restaurant.id%>/<%=Restaurant.name%>/bookmark" method="POST" class="actions-buttons">
+		<form action="/<%=Restaurant.id%>/bookmark" method="POST" class="actions-buttons">
 				<button class="btn btn-outline-danger">bookmark</button>
 		</form>
 		
