--- a/public/stylesheets/ShowPageStyles.css
+++ b/public/stylesheets/ShowPageStyles.css
@@ -62,10 +62,10 @@ body{
 .review{
     background-color: white;
     border-radius: 25px;
-    
+    width: 100%;
     box-shadow: rgba(28, 28, 28, 0.12) 0px 2px 8px;
     margin:1rem;
-    padding:0.6rem;
+    padding:1rem;
 }
 
 #map{
