--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-</div>
+</body>
 <!-- Menu Toggle Script -->
 <script type="text/javascript" src="/javascripts/utils.js"></script>
 <script defer type="text/javascript" src="/javascripts/modal.js"></script>
